Update packaging process to use standard JDK without jlink